# AegisSummerInterns2026

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml  pytest.yml  python-app.yml
azurite_data/: AzuriteConfig  __azurite_db_blob__.json  __azurite_db_blob_extent__.json
backend/: Dockerfile  create_tables.py  main.py  pyproject.toml
backend/migrations/: env.py
backend/modules/: DataCleaner.py  Decryptor.py  HubSpotIntegration.py  LinkGenerator.py  ReceiptGenerator.py  __init__.py  auth.py  downloadData.py  models.py  uploader.py
backend/tests/: test_auth.py  test_hubspotintegration.py  test_link_generator.py  test_main.py  test_uploader.py
backend/uploads/: Gabe is chilling.txt
frontend/: .dockerignore
frontend/public/: robots.txt
frontend/src/: App.tsx
frontend/src/features/auth/: LoginPage.css  LoginPage.tsx  devAuth.ts
frontend/src/features/support/data/: mockTickets.ts
frontend/src/features/support/pages/: CreateSupportLinkPage.tsx  CreateSupportTicketPage.css  CreateSupportTicketPage.tsx  SupportHomePage.css  SupportHomePage.tsx  SupportLinksPage.tsx  SupportTicketsPage.css  SupportTicketsPage.tsx
frontend/src/features/uploader/: CustomerUpload.css  CustomerUpload.tsx  UploadDetails.css  UploadDetails.tsx
frontend/src/layouts/: CustomerLayout.tsx  SupportLayout.css  SupportLayout.tsx
frontend/src/styles/: global.css
nginx/: DOCKERFILE  nginx.conf
